--- a/v1.24.0.md
+++ b/v1.24.0.md
@@ -3,6 +3,7 @@
   - [Changelog since v1.23.0](#changelog-since-v1230)
     - [Changes by Kind](#changes-by-kind)
       - [Other](#other)
+      - [Deprecation](#deprecation)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Bug or Regression](#bug-or-regression)
@@ -15,16 +16,16 @@
 # CRI-O v1.24.0
 
 The release notes have been generated for the commit range
-[v1.23.0...761c2c1](https://github.com/cri-o/cri-o/compare/v1.23.0...761c2c137c1454ad4817a3b95bc4c3f1ff41d594) on Thu, 28 Apr 2022 13:41:29 UTC.
+[v1.23.0...40cdd9c](https://github.com/cri-o/cri-o/compare/v1.23.0...40cdd9c2d97384eb5601c1af28e7092cdda3815e) on Thu, 28 Apr 2022 22:49:24 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz)
-- [cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum)
-- [cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz)
-- [cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.761c2c137c1454ad4817a3b95bc4c3f1ff41d594.tar.gz.sha256sum)
+- [cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz)
+- [cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum)
+- [cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz)
+- [cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.40cdd9c2d97384eb5601c1af28e7092cdda3815e.tar.gz.sha256sum)
 
 ## Changelog since v1.23.0
 
@@ -38,6 +39,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
   crio_image_pulls_success_total, crio_image_pulls_failure_total,
   crio_image_layer_reuse_total, crio_containers_oom_count_total
   while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
+
+#### Deprecation
+ - Mark --pids-limit and --log-size-max options as deprecated, as well as set the default pids-limit to unlimited. Users should migrate to using the Kubelet's flags --pod-pids-limit and --container-log-max-size respectively. ([#5831](https://github.com/cri-o/cri-o/pull/5831), [@haircommander](https://github.com/haircommander))
 
 #### API Change
  - Enable `--seccomp-use-default-when-empty`/`seccomp_use_default_when_empty` by default.
